[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/scripts/config_menu.gd" type="Script" id=1]
[ext_resource path="res://resources/sounds/menu_options.ogg" type="AudioStream" id=2]
[ext_resource path="res://resources/sounds/pluck_002.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Kenney Pixel Square.ttf"

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Kenney Pixel Square.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/Kenney Pixel Square.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[node name="Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 958.0
margin_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 184.0
margin_top = 97.0
margin_right = 773.0
margin_bottom = 443.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 589.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
text = "Configuración"
align = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 589.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 30 )

[node name="Options" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 589.0
margin_bottom = 278.0
columns = 2
script = ExtResource( 1 )

[node name="OverlaySizeLabel" type="Label" parent="CenterContainer/VBoxContainer/Options"]
margin_right = 435.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "Tamaño de controles"

[node name="OverlaySizeOption" type="SpinBox" parent="CenterContainer/VBoxContainer/Options"]
margin_left = 439.0
margin_right = 589.0
margin_bottom = 36.0
min_value = 1.0
max_value = 5.0
value = 1.0
rounded = true

[node name="OverlayAlphaLabel" type="Label" parent="CenterContainer/VBoxContainer/Options"]
margin_top = 40.0
margin_right = 435.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
text = "transparencia de controles"

[node name="OverlayAlphaOption" type="HSlider" parent="CenterContainer/VBoxContainer/Options"]
margin_left = 439.0
margin_top = 40.0
margin_right = 589.0
margin_bottom = 56.0
max_value = 1.0
step = 0.05

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/Options"]
margin_top = 83.0
margin_right = 435.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
text = "Config 3"

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer/Options"]
margin_left = 439.0
margin_top = 80.0
margin_right = 589.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Opciones"

[node name="Label4" type="Label" parent="CenterContainer/VBoxContainer/Options"]
margin_top = 129.0
margin_right = 435.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 2 )
text = "Config 4"

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer/Options"]
margin_left = 439.0
margin_top = 126.0
margin_right = 589.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Opciones"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 589.0
margin_bottom = 312.0
rect_min_size = Vector2( 0, 30 )

[node name="CommitButtons" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 316.0
margin_right = 589.0
margin_bottom = 346.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CommitButtons"]
margin_left = 98.0
margin_right = 490.0
margin_bottom = 30.0

[node name="Save" type="Button" parent="CenterContainer/VBoxContainer/CommitButtons/HBoxContainer"]
margin_right = 96.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "Guardar"

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer/CommitButtons/HBoxContainer"]
margin_left = 100.0
margin_right = 110.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 0 )

[node name="Cancel" type="Button" parent="CenterContainer/VBoxContainer/CommitButtons/HBoxContainer"]
margin_left = 114.0
margin_right = 220.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "Cancelar"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer/CommitButtons/HBoxContainer"]
margin_left = 224.0
margin_right = 234.0
margin_bottom = 30.0
rect_min_size = Vector2( 10, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="CenterContainer/VBoxContainer/CommitButtons/HBoxContainer"]
margin_left = 238.0
margin_right = 392.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "Reestablecer"

[node name="ChangeOptionPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SelectOptionPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="button_up" from="CenterContainer/VBoxContainer/CommitButtons/HBoxContainer/Save" to="CenterContainer/VBoxContainer/Options" method="_on_Save_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/CommitButtons/HBoxContainer/Cancel" to="CenterContainer/VBoxContainer/Options" method="_on_Cancel_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/CommitButtons/HBoxContainer/Reset" to="CenterContainer/VBoxContainer/Options" method="_on_Reset_button_up"]
